--- a/SharpPDFLabel.csproj
+++ b/SharpPDFLabel.csproj
@@ -54,6 +54,8 @@
     <Compile Include="Enums.cs" />
     <Compile Include="LabelDefinition.cs" />
     <Compile Include="Labels\A4Labels\Avery\L5160.cs" />
+    <Compile Include="Labels\LetterLabels\L1_75x0_5.cs" />
+    <Compile Include="Labels\LetterLabels\L2_625x1_0.cs" />
     <Compile Include="SingleSheetLabelCreator.cs" />
     <Compile Include="Labels\A4Labels\Avery\L7160.cs" />
     <Compile Include="Labels\A4Labels\Avery\L7654.cs" />
